application/k8-manifests/nginx/ngnix-service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: demo-app
spec:
  type: ClusterIP  
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: nginx
